--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,8 @@ build:
     tags:
         - docker
     image: docker:latest
+    services:
+        - docker:dind
     script:
         - docker info
         - docker build -t $HUB_URL .
